--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ body,
   transition: 500ms all;
 }
 
-
 #edit::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -46,6 +45,20 @@ body,
 #delete::backdrop {
   background-color: black;
   opacity: 0.5;
+}
+
+.animate-fade-in {
+  transition: all 500ms !important;
+  animation: fade-in forwards 500ms;
+}
+
+@keyframes scale-out {
+  from {
+    transform: scale(100%);
+  }
+  to {
+    transform: scale(90%);
+  }
 }
 @keyframes fade-in {
   from {
